fix for IE padding top on mobile

--- a/web/themes/custom/myusf/sass/src/partials/_components.scss
+++ b/web/themes/custom/myusf/sass/src/partials/_components.scss
@@ -1514,7 +1514,7 @@ button.close {
     padding-bottom: 15px;
 
      @include media-breakpoint-down(phone) {
-     	padding: 2.5rem 1.875rem 2rem 1.875rem;
+     	padding: 2.85rem 1.875rem 2.25rem 1.875rem;
      }
 }
 .alert-text {
